--- a/scss/utilidades/_variables.scss
+++ b/scss/utilidades/_variables.scss
@@ -1,3 +1,4 @@
+/* variables para los 3 colores del proyecto */
 $colorPrincipal: #E51B23;
 $colorSecundario: #373333;
 $colorTerciario: whitesmoke;
